# fastapi_base_app

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
src/: main.py
src/core/: config.py
src/core/models/: base.py  db_helper.py
