[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = { extras = ["standard"], version = "^0.40.0" }
pydantic = { extras = ["email"], version = "^2.12.5" }
pydantic-settings = "^2.12.0"
greenlet = "^3.3.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.45" }
asyncpg = "^0.31.0"
alembic = "~1.16.1"
axios = "^0.4.0"
pyjwt = { extras = ["crypto"], version = "^2.10.1" }
bcrypt = "^5.0.0"
python-multipart = "^0.0.22"
psycopg2-binary = "^2.9.11"
python-slugify = "^8.0.4"

[dependency-groups]
dev = [
    "black (>=26.1.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"